# CHB

./: .gitignore  CITATION.cff  LICENSE  README.md  chb_metrics.py  pyproject.toml  readme.md  smoke_test.py
assets/: chb_framework.tex
chb/: __init__.py  __main__.py  metrics.py
chb_clustering.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/: quickstart.ipynb
tests/: smoke_test.py
